2008-08-07  Chris Lord  <chris@openedhand.com>

	* src/home/hd-home-view.c (hd_home_view_allocate),
	(hd_home_view_class_init), (get_bg_image_processed_name),
	(bg_image_set_idle_cb), (process_bg_image_thread),
	(hd_home_view_refresh_bg):
	Refresh the background image when the HomeView changes size

2008-08-07 Tomas Frydrych  <tf@o-hand.com>

	src/mb/hd-wm.c:
	Removed stale comment.

	src/home/hd-layout-dialog.c:
	(hd_layout_dialog_constructed):
	Gettextized labels.

2008-08-07 Tomas Frydrych  <tf@o-hand.com>

	* configure.ac:
	Added -Wno-format-extra-args (necessary for us to work with the
	hildon logical strings).

	src/mb/hd-wm.c:
	(hd_wm_client_hang):
	Gettextized hand dialog; changed to conform to spec.

2008-08-07 Tomas Frydrych  <tf@o-hand.com>

	* src/mb/hd-dialog.c:
	Implement dialog sizing and positioning logic.

2008-08-05 Robert Bragg  <bob@o-hand.com>

	* tests/test-portrait.c
	* tests/Makefile.am:
	Adds a simple portrait mode unit tests. It basically just lets you
	toggle a property (currently called "_HILDON_SUPPORTS_PORTRAIT_MODE")
	on a gtk window, and create transient dialogs with/without the same
	property set.

2008-08-04  Chris Lord  <chris@openedhand.com>

	* configure.ac:
	Add gconf-2.0 to dependencies

	* src/home/hd-background-dialog.[ch]:
	* src/home/Makefile.am:
	Add hd-background-dialog.[ch]

	* src/home/hd-edit-menu.c (hd_edit_menu_item_release):
	Create and show the background dialog when choosing the
	change-background menu option

	* src/home/hd-home-view.c (hd_home_view_class_init),
	(hd_home_view_get_gconf_path), (hd_home_view_gconf_bgcolor_notify),
	(hd_home_view_gconf_bgimage_notify),
	(hd_home_view_gconf_bgstyle_notify), (hd_home_view_constructed),
	(hd_home_view_init), (hd_home_view_dispose),
	(get_bg_image_processed_name), (bg_image_set_idle_cb),
	(process_bg_image_thread), (hd_home_view_refresh_bg),
	(hd_home_view_set_property), (hd_home_view_get_property),
	(hd_home_view_set_background_color):
	* src/home/hd-home-view.h: